[maven] Output the exception stack trace when an error was found during te documentation generation.
see #1018

Signed-off-by: Stéphane Galland <galland@arakhne.org>